DI: Correctly flag escaping uses of 'self' when 'self' is passed as an argument to self/super.init

This fixes a regression from a previous patch, but it doesn't
fully address <https://bugs.swift.org/browse/SR-5682>, because
we now hit a SILGen crasher with the original test case.